<resources>
    <string name="app_name">Nextdoorhelp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- String for shared prefs -->
    <string name="shared_pref_name">user_session</string>

    <string name="facebook_app_id">594502184091803</string>

    <string name="startup_caption">Who can help you?</string>

    <!-- Menu titles -->
    <string name="menu_dress">Dress</string>
    <string name="menu_bathroom">Bathroom</string>
    <string name="menu_restroom">Restroom</string>
    <string name="menu_catering">Food</string>
    <string name="menu_furniture">Furniture</string>
    <string name="menu_locate">Locate</string>


    <!-- Result messages -->
    <string name="results_catering">food helper nearby</string>
    <string name="results_restroom">restroom helper nearby</string>
    <string name="results_bathroom">bathroom helper nearby</string>
    <string name="results_furniture">furniture helper nearby</string>
    <string name="results_suit">dress helper nearby</string>
    <string name="results_catering_need">food need nearby</string>
    <string name="results_restroom_need">restroom need nearby</string>
    <string name="results_bathroom_need">bathroom need nearby</string>
    <string name="results_furniture_need">furniture need nearby</string>
    <string name="results_suit_need">dress need nearby</string>
    <string name="miles">miles away</string>

    <!-- Graphic attribute titles - used in UI -->
    <string name="graphic_title">Title</string>
    <string name="graphic_address">Address</string>
    <string name="graphic_distance">Distance</string>
    <string name="graphic_phone">Phone</string>
    <string name="graphic_rating">Rating</string>

    <!-- Service result attribute names, not used in UI -->
    <string name="result_title">PlaceName</string>
    <string name="result_address">Place_addr</string>
    <string name="result_distance">Distance</string>
    <string name="result_phone">Phone</string>
    <string name="result_rating">Rating</string>
    <string name="result_type">Type</string>

    <string name="coffee_query">Coffee Shop</string>
    <string name="pizza_query">Pizza</string>
    <string name="bar_query">Pub</string>
    <string name="title_activity_need_helper">NeedHelperActivity</string>

</resources>
