<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dress"
        android:icon="@drawable/dress_white_small"
        app:showAsAction="always"
        android:title="@string/menu_dress"/>

    <item
        android:id="@+id/furniture"
        android:icon="@drawable/furniture_white_small"
        app:showAsAction="always"
        android:title="@string/menu_furniture"/>

    <item
        android:id="@+id/restroom"
        android:icon="@drawable/toilet_white_small"
        app:showAsAction="always"
        android:title="@string/menu_restroom"/>

    <item
        android:id="@+id/bathroom"
        android:icon="@drawable/bathroom_white_small"
        app:showAsAction="always"
        android:title="@string/menu_bathroom"/>

    <item
        android:id="@+id/catering"
        android:icon="@drawable/catering_white_small"
        app:showAsAction="always"
        android:title="@string/menu_catering"/>

    <item
        android:id="@+id/locate"
        android:icon="@drawable/ic_action_location_searching"
        app:showAsAction="always"
        android:title="@string/menu_locate"/>

</menu>